; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/status/extr_durations.c_on_context_init.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/status/extr_durations.c_on_context_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_h2o_logger_t = type { i32 }
%struct.st_duration_stats_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_logger_t*, i32*)* @on_context_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_context_init(%struct.st_h2o_logger_t* %0, i32* %1) #0 {
  %3 = alloca %struct.st_h2o_logger_t*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.st_duration_stats_t*, align 8
  store %struct.st_h2o_logger_t* %0, %struct.st_h2o_logger_t** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call %struct.st_duration_stats_t* @h2o_mem_alloc(i32 4)
  store %struct.st_duration_stats_t* %6, %struct.st_duration_stats_t** %5, align 8
  %7 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %5, align 8
  %8 = call i32 @duration_stats_init(%struct.st_duration_stats_t* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load %struct.st_h2o_logger_t*, %struct.st_h2o_logger_t** %3, align 8
  %11 = load %struct.st_duration_stats_t*, %struct.st_duration_stats_t** %5, align 8
  %12 = call i32 @h2o_context_set_logger_context(i32* %9, %struct.st_h2o_logger_t* %10, %struct.st_duration_stats_t* %11)
  ret void
}

declare dso_local %struct.st_duration_stats_t* @h2o_mem_alloc(i32) #1

declare dso_local i32 @duration_stats_init(%struct.st_duration_stats_t*) #1

declare dso_local i32 @h2o_context_set_logger_context(i32*, %struct.st_h2o_logger_t*, %struct.st_duration_stats_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
